http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

bazel_dep(name = "rules_rust", version = "0.51.0")


## Rust
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    versions = ["1.81.0"],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

register_toolchains("@rules_rust//proto/protobuf:default-proto-toolchain")
rust_proto = use_extension("@rules_rust//proto:extensions.bzl", "rust_proto")
rust_proto.repositories()

crate = use_extension("@rules_rust//crate_universe:extension.bzl", "crate", isolate = True)
crate.spec(
    package = "libc",
    version = "0.2.159",
)
crate.spec(
    package = "protobuf",
    version = "3.5.1",
)
crate.spec(
    package = "semver",
    version = "1.0.23",
)
crate.spec(
    package = "bencher",
    version = "0.1.5",
)
crate.from_specs()
use_repo(crate, "crates")