http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

bazel_dep(name = "rules_rust", version = "0.51.0")
bazel_dep(name = "nlohmann_json", version = "3.11.3.bcr.1")
bazel_dep(name = "distributed_point_functions", version = "0.0.0")
bazel_dep(name = "googletest", version = "1.15.2")

## Rust

crate = use_extension("@rules_rust//crate_universe:extension.bzl", "crate")
crate.spec(
    package = "libc",
    version = "0.2.159",
)
crate.spec(
    package = "thiserror",
    version = "2.0.11",
)
crate.spec(
    package = "serde",
    version = "1.0.217",
    features = ["derive"],
)
crate.spec(
    package = "serde_json",
    version = "1.0.138",
)
crate.from_specs()
use_repo(crate, "crates")