bazel_dep(name = "rules_rust", version = "0.51.0")
bazel_dep(name = "nlohmann_json", version = "3.11.3.bcr.1")
bazel_dep(name = "distributed_point_functions", version = "0.0.0")
bazel_dep(name = "googletest", version = "1.15.2")

## Rust
crate = use_extension("@rules_rust//crate_universe:extension.bzl", "crate")

crate.spec(
    package = "libc",
    version = "0.2.159",
)

crate.spec(
    package = "thiserror",
    version = "2.0.11",
)

crate.spec(
    package = "serde",
    version = "1.0.217",
    features = ["derive"],
)

crate.spec(
    package = "serde_json",
    version = "1.0.138",
)

crate.spec(
    package = "base64",
    version = "0.22.1"
)

crate.spec(
    package = "rand",
    version = "0.8",
)

# Cuckoo Dependencies

crate.spec(
    package = "hmac",
    version = "0.12",
)

crate.spec(
    package = "sha2",
    version = "0.10",
)

# Crypto Dependencies

crate.spec(
    package = "aes-gcm",
    version = "0.10.3",
)

crate.spec(
    package = "ring",
    version = "0.17.8",
)

crate.from_specs()
use_repo(crate, "crates")